@@ -1,5 +1,10 @@
 2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>
 
+	* Quick fix on dialog
+	* Don't try to pause with sleep timer unless we're playing
+
+2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>
+
 	* First hack at mixing Bertrand's code with my sleep timer
 	* Lots 'o changes :)
 	* Still lots to do :)
